[package]
name = "rust-auto-sign-network-flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
chrono-tz = "0.8.2"
job_scheduler = "1.2.1"
lazy_static = "1.4.0"
lettre = "0.10.4"
mysql = "23.0.1"
reqwest = { version = "0.11.16", features = ['json', 'cookies'] }
serde = "1.0.159"
tokio = { version = "1.27.0", features = ['full'] }
tokio-scheduler-rs = "0.1.4"
toml = "0.7.3"
